# q-agents

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  README.zh-CN.md  TODO.md  docker-compose.yml  latest_events.txt  mcp_config.json  pyproject.toml
app/: __init__.py  config_manager.py  database.py  embedding_config.py  graph_multi.py  llm_config.py  state.py
app/analysis/: __init__.py  runtime.py
app/api/: __init__.py  main.py
app/config/: __init__.py  network.py  rate_limits.py
app/database/: __init__.py  agent_history.py  batch_operations.py  crypto_ohlc.py  message_adapter.py  ohlc.py  ohlc_aggregation.py  schema.py
app/dataflows/: README.md  __init__.py  base.py  cache.py  config.py  interface.py  models.py
app/digest/: __init__.py  cio.py  config.py  generator.py  macro_news.py  models.py  render.py  technical.py
app/mcp_client/: __init__.py  cli.py  config.py  connection_manager.py  finance_client.py
app/ml/: __init__.py  dl_dataset.py  dl_trainer.py  feature_engine.py  features.py  generate_report.py  model_registry.py  model_trainer.py  (+4 more)
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: PROXY_CONFIGURATION.md  crypto_data_gap_analysis.md
frontend/: .prettierignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
mcp_servers/: __init__.py
scripts/: QUICKSTART.md  README_CRYPTO_DATA.md  backfill_stock_gap.py  batch_process.py  build_event_memory_batch.py  check_crypto_continuity.py  check_recent_btc.py  clean_crypto_data.py  daily_harvester.py  demo_enhanced_tools.py  demo_local_tools.py  download_binance_vision.py  download_crypto_data.py  download_stock_data.py  explore_polymarket.py  export_events.py  init_crypto_data.py  init_crypto_data_optimized.py  inspect_event_memory.py  list_tickers.py  manual_run.py  merge_duplicate_symbols.py  process_layer1.py  query_event_memory.py  run_ml_quant_metrics.py  search_polymarket_by_category.py  start_api.sh  start_mcp_servers.sh  stop_mcp_servers.sh  test_binance_download.py  test_dataflows.py  verify_embedding.py  verify_llm_config.py
tests/: conftest.py  manual_news_test.py  manual_quote_test.py  manual_run.py  test_agent_history.py  test_analysis_runtime.py  test_analysis_stage_events.py  test_analyze_routes.py  test_config_manager_okx.py  test_crypto_routes.py  test_dataflows_base.py  test_dataflows_cache.py  test_dataflows_config.py  test_dataflows_mcp_provider.py  test_dataflows_models.py  test_dataflows_router.py  test_dataflows_yfinance_provider.py  test_dl_dataset.py  test_dl_trainer.py  test_history_api.py  test_mcp_config.py  test_mcp_connection_manager.py  test_mcp_server_tool_errors.py  test_message_adapter.py  test_ml_panel_pipeline.py  test_ml_signal_filter.py  test_ml_similarity.py  test_model_registry.py  test_multi_agent_graph.py  test_news_agent_mcp.py  test_news_generate_report.py  test_nlp_claude.py  test_ohlc_aggregation.py  test_okx_client_balance.py  test_okx_client_init.py  test_okx_client_order.py  test_okx_client_order_mgmt.py  test_okx_client_positions.py  test_okx_exceptions.py  test_okx_market_data.py  (+14 more)
(+256 files in other folders)
