[project]
name = "finance-agent"
version = "0.1.0"
description = "Monolithic financial analysis agent built with LangGraph."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mcp[cli]",
    "langchain",
    "langgraph",
    "langchain-openai",
    "chromadb",
    "langchain-chroma",
    "pandas",
    "yfinance",
    "tavily-python",
    "ddgs",
    "python-dotenv",
    "pytest",
    "playwright",
    "numpy>=2.2.6",
    "pandas-ta>=0.4.71b0",
    "lightgbm>=4.6.0",
    "shap>=0.51.0",
    "scikit-learn>=1.8.0",
    "langchain-community>=0.4.1",
    "anthropic>=0.85.0",
    "langchain-anthropic>=1.4.0",
    "langchain-huggingface>=1.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.1",
    "apscheduler>=3.10.4",
    "python-okx>=0.4.1",
    "tenacity>=9.1.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
